# OpsWitness

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  architecture_diagram.md  pyproject.toml
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ui/: GraphCanvas.tsx  OpsWitnessConsole.tsx  api.ts  types.ts
splunk/: opswitness_dashboard.xml
splunk/opswitness/: README.md
splunk/opswitness/default/: app.conf  collections.conf  savedsearches.conf  transforms.conf
splunk/opswitness/default/data/ui/nav/: default.xml
splunk/opswitness/lookups/: opswitness_response_playbooks_seed.csv  opswitness_service_policy_seed.csv
src/opswitness/: client.py
src/opswitness/api/: app.py
src/opswitness/core/: event_store.py  events.py  io.py  labels.py  replay.py
src/opswitness/graph/: builder.py  store.py
src/opswitness/incidents/: __init__.py  models.py  service.py
src/opswitness/integrations/: cdtsm.py  foundation_sec.py  slack.py  soar.py
src/opswitness/mcp/: __init__.py  normalizer.py  proxy.py
src/opswitness/policy/: engine.py
src/opswitness/rag/: explainer.py
src/opswitness/splunk/: capabilities.py  governance.py  hec.py  search.py
tests/: support.py  test_api_fail_closed.py  test_cdtsm.py  test_event_store.py  test_foundation_sec.py  test_graph_policy.py  test_incidents.py  test_live_incident_drill.py  test_run_spl.py  test_soar.py  test_splunk_app.py  test_splunk_capabilities.py  test_splunk_governance.py
tests/fixtures/: safe-run.jsonl  unsafe-run.jsonl
(+1 files in other folders)
